--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,7 @@
 $font-stack: Avenir, Helvetica, Arial, sans-serif;
 $primary-color: rgb(237, 245, 251);
 $hovercolor: #accbe1ff;
-$main-bg: #536b78ff;
+$main-bg: rgb(59, 74, 83);
 $secondary-bg: #637081ff;
 $highlighted: #7c98b3ff;
 
@@ -11,9 +11,13 @@ $highlighted: #7c98b3ff;
   font-family: $font-stack;
 }
 
-* {
-  background-color: $main-bg;
+html{
+  background: $main-bg;
   color: $primary-color;
+}
+
+* {
+  font-family: $font-stack;
 }
 
 header{
@@ -43,11 +47,6 @@ header{
   }
 }
 
-input{
-  height: 30px;
-  width: 200px;
-}
-
 img{
   width: 600px;
   height: auto;
@@ -55,4 +54,34 @@ img{
 
 a {
   color: #42b983;
+}
+
+#rentwindow{
+  margin: 50px 0 0 200px;
+  padding-left: 10px;
+  border: 1px solid;
+  width: 1000px;
+  height: 400px;
+  p{
+    font-size: 20px;
+    font-weight: bold;
+  }
+  form{
+    display: grid;
+    width: 0.5em;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    gap: 10px;
+
+    #pickupLoc{
+      grid-column: 1/3;
+    }
+    #pickupDate{
+
+    }
+    #bringbackDate{
+
+    }
+
+  }
 }
