--- a/src/main.scss
+++ b/src/main.scss
@@ -1,14 +1,13 @@
 $font-stack: Avenir, Helvetica, Arial, sans-serif;
 $primary-color: rgb(237, 245, 251);
-$hovercolor: #accbe1ff;
+$accentcolor: #2dae74;
 $main-bg: rgb(59, 74, 83);
 $secondary-bg: #637081ff;
-$highlighted: #7c98b3ff;
+$highlighted: rgb(105, 128, 149);
 
-#app{
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: $font-stack;
+
+hr{
+  color: $secondary-bg;
 }
 
 html{
@@ -43,8 +42,12 @@ header{
     padding: 0 20px 0 20px;
   }
   div[class='t1']:hover{
-    color: $hovercolor;
+    color: $accentcolor
   }
+}
+
+h2{
+  padding-left: 20px;
 }
 
 img{
@@ -53,41 +56,50 @@ img{
 }
 
 a {
-  color: #42b983;
+  color: $accentcolor;
 }
 
 // Booking window
 #rentwindow{
-  margin: 50px 0 0 200px;
+  margin-top: 50px;
+  margin-left: 200px;
   padding-left: 10px;
   width: 1000px;
   height: 400px;
-  background-color: $highlighted;
+  background-color: $secondary-bg;
   border-radius: 5px;
   box-shadow: 1px 2px 10px black;
   display: flex;
   justify-content: space-between;
-
   p{
-    font-size: 20px;
     font-weight: bold;
-    color: rgb(30, 30, 30);
+    font-size: 30px;
+    grid-column: span 2;
+    color: $primary-color;
   }
   form{
     display: grid;
-    width: 0.5em;
+    gap: 10px;
+    padding-bottom: 25px;
+    padding-left: 10px;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    gap: 15px;
-    grid-row: 1/2;
+    grid-template-rows: auto auto auto;
+
+    #pickupLoc{
+      grid-column: span 2;
+    }
 
     input{
       height: 40px;
       border-radius: 5px;
     }
 
-    #pickupLoc{
-      grid-column: 1/3;
+    button{
+      border-radius: 3px;
+      border: transparent;
+      grid-column: span 2;
+      color: $primary-color;
+      background: $accentcolor;
     }
   }
 }
@@ -96,6 +108,8 @@ a {
 #services{
   display: flex;
   justify-content: space-around;
+  height: 400px;
+
   div{
     width: 300px;
   }
@@ -110,20 +124,38 @@ a {
 //customersupport section
 #recommendation{
   width: 30%;
-  text-align: center;
-  padding: 10px 20px 10px 20px;
-  height: 200px;
-  border-radius: 20px;
-  background-color: $secondary-bg;
+  margin: auto;
+  margin-bottom: 200px; //nochmal extra durch das zentrieren mit margin auto
+  p{
+    text-align: center;
+    padding: 20px 20px 20px 20px;
+    height: 200px;
+    border-radius: 20px;
+    background-color: $highlighted;
+  }
+}
+
+#aboutus{
+  p{
+    padding-left: 20px;
+    width: 80%;
+  }
+}
+
+// space between sections
+.s1{
+  margin-bottom: 100px;
 }
 
 //Footer
 footer{
   display: flex;
   justify-content: space-around;
+  background-color: rgb(59, 69, 76);
   img{
-    width: 50px;
-    height: 50px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
   }
   h4{
     color: rgb(176, 176, 176);
